--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,12 +1,19 @@
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script>
-  AOS.init({
-    offset: 300
-  })
-</script>
-<script src="/js/script.js"></script>
-</body>
-</html>
+<footer class = "py-5" id ="footer">
+  <div class = "container footer-container row text-white mx-auto">
+    <div class = "col-12 col-md-6" id = "footer-contact-col">
+      <h5 class = "mb-3 text-muted">CONTACT INFORMATION</h5>
+      <h6 class = "fw-light mb-3"><i class="fa-solid fa-location-arrow me-2"></i>SRI PETALING</h6>
+      <h6 class = "fw-light mb-3"><i class="fa-solid fa-phone me-2"></i>012-367 2831</h6>
+      <h6 class = "fw-light mb-3"><i class="fa-solid fa-clock me-2 "></i>10AM-10PM</h6>
+    </div>
+
+    <div class = "col-12 col-md-6"> 
+      <h5 class = "mb-3 text-muted">SUBSCRIBE TO OUR NEWSLETTER</h5>
+    <form action="" class = "mb-3">
+      <input type="email" class = "form-control" name="newsletter" placeholder="Email" id="newsletter">
+    </form>
+      <small>Subscribe to our Newsletter. You will get news about giveaways and new blog posts.</small>
+    </div>
+  </div>
+</footer>
+
